# drone-svd

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix
src/: device.rs  field.rs  generate_registers.rs  generator.rs  interrupt.rs  lib.rs  peripheral.rs  register.rs  traverse.rs  variant.rs
src/device/: access.rs  field.rs  mod.rs  peripheral.rs  register.rs
