[package]
name = "drone-svd"
version = "0.15.0"
authors = ["Valentyn Valiaiev <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-svd"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-svd/0.15/drone_svd/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "framework",
    "real-time",
    "bare-metal",
    "rtos",
    "firmware",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
CMSIS-SVD parser for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
eyre = "0.6.8"
indexmap = "1.9.1"
serde = { version = "1.0.144", features = ["derive"] }
serde-xml-rs = "0.4"
